# cudaAwareMPITest

./: CMakeLists.txt  LICENSE  README.md  communicationTable.csv  cudaWrapper.h  main.cpp  readTable.h  stringFunctions.h
communicationLists/: example_108_processes.csv  example_16_processes.csv
communicationTables/: example_32_processes.csv  example_4_processes.csv  example_64_processes.csv  example_8_processes.csv
src/: cudaWrapper.h  main.cpp  readCommList.h  readTable.h
